WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132704
[iOS] WebKit should listen to critical memory warnings.
https://bugs.webkit.org/show_bug.cgi?id=132704
Summary
[iOS] WebKit should listen to critical memory warnings.
Andreas Kling
Reported
2014-05-08 13:21:31 PDT
We need to listen for critical memory warnings too, not just the "warning warnings" <
rdar://problem/16857112
>
Attachments
Patch
(1.83 KB, patch)
2014-05-08 13:23 PDT
,
Andreas Kling
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-05-08 13:23:47 PDT
Created
attachment 231098
[details]
Patch
Andreas Kling
Comment 2
2014-05-08 14:30:18 PDT
Committed
r168496
: <
http://trac.webkit.org/changeset/168496
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug