[iOS] WebKit should listen to critical memory warnings. <https://webkit.org/b/132704> <rdar://problem/16857112>

Listen for DISPATCH_MEMORYSTATUS_PRESSURE_CRITICAL in addition to
DISPATCH_MEMORYSTATUS_PRESSURE_WARN, since we may only get the critical
notification on some systems.

Reviewed by Gavin Barraclough.

* platform/cocoa/MemoryPressureHandlerCocoa.mm:
(WebCore::MemoryPressureHandler::install):

Canonical link: https://commits.webkit.org/150753@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168496 268f45cc-cd09-0410-ab3c-d52691b4dbfc